@@ -14,8 +14,10 @@ Changes
 Fixes
 -----
 
- - Remove horizontal scroll from the console editor.
+ - Improve shards view performance
 
+ - Remove horizontal scroll from the console editor.
+  
 2017/09/18 1.6.1
 ================
 
